--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.11.0" %}
+{% set version = "2.11.1" %}
 
 package:
   name: requests
@@ -6,8 +6,8 @@ package:
 
 source:
   fn: requests-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/r/requests/requests-{{ version }}.tar.gz
-  sha256: b2ff053e93ef11ea08b0e596a1618487c4e4c5f1006d7a1706e3671c57dea385
+  url: https://github.com/kennethreitz/requests/archive/v{{ version }}.tar.gz
+  sha256: e8e5710ae923a00e45631f0e47c30ebfc83b7a8c4a7a818f78bf820f9b607558
 
 build:
   number: 0
@@ -28,7 +28,7 @@ test:
 about:
   home: http://python-requests.org
   license: Apache 2.0
-  summary: Python HTTP for Humans.
+  summary: 'Python HTTP for Humans.'
 
 extra:
   recipe-maintainers:
