--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.12.1" %}
+{% set version = "2.12.3" %}
 
 package:
   name: requests
@@ -7,7 +7,7 @@ package:
 source:
   fn: requests-{{ version }}.tar.gz
   url: https://github.com/kennethreitz/requests/archive/v{{ version }}.tar.gz
-  sha256: 0c1be05354c1e7fbd5037d697e97238a36111279f4df4e313acda2bbfa015700
+  sha256: 8d47f177d02574d146c6845c9fa0881a610c2a3dd5e19f549b8d272a3eaa5d66
 
 build:
   number: 0
@@ -28,6 +28,7 @@ test:
 about:
   home: http://python-requests.org
   license: Apache 2.0
+  license_file: LICENSE
   summary: 'Python HTTP for Humans.'
 
 extra:
