--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   sha256: 9c443e7324ba5b85070c4a818ade28bfabedf16ea10206da1132edaa6dda237e
 
 build:
-  number: 0
+  number: 1
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -19,8 +19,8 @@ requirements:
   run:
     - python
     - chardet >=3.0.2,<3.1.0
-    - idna >=2.5,<2.6
-    - urllib3 >=1.21.1,<1.22
+    - idna >=2.5,<2.7
+    - urllib3 >=1.21.1,<1.23
     - certifi >=2017.4.17
 
 test:
@@ -38,6 +38,7 @@ extra:
     - jakirkham
     - kalefranz
     - mcg1969
+    - mingwandroid
     - msarahan
     - pelson
     - sigmavirus24
