--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 1000
-  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vvv"
+  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv"
 
 requirements:
   host:
@@ -19,8 +19,8 @@ requirements:
   run:
     - python
     - chardet >=3.0.2,<3.1.0
-    - idna >=2.5,<2.8
-    - urllib3 >=1.21.1,<1.24
+    - idna >=2.5,<2.9
+    - urllib3 >=1.21.1,<1.25
     - certifi >=2017.4.17
 
 test:
