--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,8 @@ source:
   sha256: b3f43d496c6daba4493e7c431722aeb7dbc6288f52a6e04e7b6023b0247817e6
 
 build:
-  number: 1
+  noarch: python
+  number: 2
   script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
