--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,9 +19,9 @@ requirements:
     - pip
   run:
     - python
-    - chardet >=3.0.2,<4
+    - chardet >=3.0.2,<5
     - idna >=2.5,<3
-    - urllib3 >=1.21.1,<1.26,!=1.25.0,!=1.25.1
+    - urllib3 >=1.21.1,<1.27
     - certifi >=2017.4.17
 
 test:
