--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: b8aa58f8cf793ffd8782d3d8cb19e66ef36f7aba4353eec859e74678b01b07a7
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -22,8 +22,8 @@ requirements:
   run:
     - python >=3.6
     - certifi >=2017.4.17
-    - chardet >=3.0.2,<5
-    - charset-normalizer >=2.0.0,<2.0.1
+    - charset-normalizer >=2.0.0,<2.1
+    - idna >=2.5,<4
     - urllib3 >=1.21.1,<1.27
 
 test:
