--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,9 @@ requirements:
     - charset-normalizer >=2.0.0,<2.1
     - idna >=2.5,<4
     - urllib3 >=1.21.1,<1.27
+  # https://github.com/psf/requests/blob/da9996fe4dc63356e9467d0a5e10df3d89a8528e/requests/__init__.py#L103-L115
+  run_constrained:
+    - chardet >=3.0.2,<5
 
 test:
   requires:
