add bot inspection

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,5 @@
+bot:
+  inspection: update-grayskull
 provider: {linux_aarch64: azure, linux_ppc64le: azure, win: azure}
 conda_forge_output_validation: true
 github:
