--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,10 +17,10 @@ build:
 
 requirements:
   host:
-    - python >=3.7,<4.0
+    - python >=3.7
     - pip
   run:
-    - python >=3.7,<4.0
+    - python >=3.7
     - certifi >=2017.4.17
     - charset-normalizer >=2,<4
     - idna >=2.5,<4
