--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,14 +13,14 @@ source:
 build:
   number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.8
     - pip
   run:
-    - python >=3.7
+    - python >=3.8
     - certifi >=2017.4.17
     - charset-normalizer >=2,<4
     - idna >=2.5,<4
