Add python_version to tests section for noarch python recipes

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -35,6 +35,7 @@ requirements:
 
 tests:
   - python:
+      python_version: ${{ python_min }}.*
       imports:
         - requests
       pip_check: true
